[tool.poetry]
name = "bread"
version = "0.1.0"
description = "Create bread recipes."
authors = ["MikeWklm <mw.mikewinkelmann@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
streamlit = "^1.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
